improved LAS UI, display algorithm, faster output

--- a/science/LAS/Loading LAS files using lasio.ipynb
+++ b/science/LAS/Loading LAS files using lasio.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
    "id": "727372b4",
    "metadata": {},
    "outputs": [],
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "id": "8c35fecb",
    "metadata": {},
    "outputs": [],
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "id": "0e0018bd",
    "metadata": {},
    "outputs": [
@@ -34,7 +34,7 @@
        "dict_keys(['Version', 'Well', 'Curves', 'Parameter', 'Other'])"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 4,
    "id": "4329bd24",
    "metadata": {},
    "outputs": [
@@ -56,7 +56,7 @@
        " HeaderItem(mnemonic=\"WRAP\", unit=\"\", value=\"NO\", descr=\"One line per depth ste\")]"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 5,
    "id": "4596fffc",
    "metadata": {},
    "outputs": [
@@ -113,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 6,
    "id": "9953deac",
    "metadata": {},
    "outputs": [
@@ -123,7 +123,7 @@
        "'15/9-F-1 B'"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -134,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 7,
    "id": "c499649d",
    "metadata": {},
    "outputs": [
@@ -148,7 +148,7 @@
        " CurveItem(mnemonic=\"ABDCQF04\", unit=\"g/cm3\", value=\"00 000 00 00:   4  ABDCQF04:COMPOSITE:rC:NONE\", descr=\"v1\", original_mnemonic=\"ABDCQF04\", data.shape=(33191,))]"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -159,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 8,
    "id": "88886162",
    "metadata": {},
    "outputs": [
@@ -200,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 9,
    "id": "a03716a0",
    "metadata": {},
    "outputs": [
@@ -232,7 +232,7 @@
        " 'RT']"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -243,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 10,
    "id": "770b7a5d",
    "metadata": {},
    "outputs": [],
@@ -253,7 +253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 11,
    "id": "bff1fcb8",
    "metadata": {},
    "outputs": [
@@ -471,7 +471,7 @@
        "[5 rows x 22 columns]"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -482,7 +482,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 12,
    "id": "5645c7eb",
    "metadata": {},
    "outputs": [
@@ -772,7 +772,7 @@
        "[8 rows x 22 columns]"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -783,7 +783,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 18,
+   "id": "0d0715e8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ABDCQF01\n",
+      "ABDCQF02\n",
+      "ABDCQF03\n",
+      "ABDCQF04\n",
+      "BS\n",
+      "CALI\n",
+      "DRHO\n",
+      "DT\n",
+      "DTS\n",
+      "GR\n",
+      "NBGRCFM\n",
+      "NPHI\n",
+      "PEF\n",
+      "RACEHM\n",
+      "RACELM\n",
+      "RD\n",
+      "RHOB\n",
+      "RM\n",
+      "ROP\n",
+      "RPCEHM\n",
+      "RPCELM\n",
+      "RT\n"
+     ]
+    }
+   ],
+   "source": [
+    "# well.columns\n",
+    "\n",
+    "for i in well.columns:\n",
+    "    print(i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "b1049d61",
    "metadata": {},
    "outputs": [
@@ -829,7 +871,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": null,
    "id": "0cd55395",
    "metadata": {},
    "outputs": [],
@@ -849,7 +891,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "id": "9c6f6ac9",
    "metadata": {},
    "outputs": [
@@ -882,7 +924,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "id": "528712b1",
    "metadata": {},
    "outputs": [
@@ -915,7 +957,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "id": "5024ebb9",
    "metadata": {},
    "outputs": [
@@ -948,7 +990,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "id": "4140a7c6",
    "metadata": {},
    "outputs": [
@@ -981,7 +1023,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "id": "7aa02956",
    "metadata": {},
    "outputs": [
@@ -1014,7 +1056,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "id": "cdbf28e4",
    "metadata": {},
    "outputs": [
@@ -1047,7 +1089,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
    "id": "7dbd3528",
    "metadata": {},
    "outputs": [
@@ -1080,7 +1122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": null,
    "id": "c5d32459",
    "metadata": {},
    "outputs": [
@@ -1113,7 +1155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": null,
    "id": "f6d1e775",
    "metadata": {},
    "outputs": [
@@ -1146,7 +1188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": null,
    "id": "3a1ca491",
    "metadata": {},
    "outputs": [
@@ -1179,7 +1221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": null,
    "id": "b353e51c",
    "metadata": {},
    "outputs": [
@@ -1212,7 +1254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": null,
    "id": "68c690a4",
    "metadata": {},
    "outputs": [
@@ -1245,7 +1287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": null,
    "id": "e8d5b77b",
    "metadata": {},
    "outputs": [
@@ -1278,7 +1320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": null,
    "id": "efdc1c36",
    "metadata": {},
    "outputs": [
@@ -1311,7 +1353,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": null,
    "id": "5b76b731",
    "metadata": {},
    "outputs": [
@@ -1344,7 +1386,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": null,
    "id": "85fe4691",
    "metadata": {},
    "outputs": [
@@ -1377,7 +1419,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": null,
    "id": "d246da57",
    "metadata": {},
    "outputs": [
@@ -1410,7 +1452,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": null,
    "id": "08773240",
    "metadata": {},
    "outputs": [
@@ -1443,7 +1485,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": null,
    "id": "cdccffa8",
    "metadata": {},
    "outputs": [
@@ -1476,7 +1518,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": null,
    "id": "787a12c7",
    "metadata": {},
    "outputs": [
@@ -1509,7 +1551,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": null,
    "id": "7627f0f5",
    "metadata": {},
    "outputs": [
@@ -1542,7 +1584,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": null,
    "id": "56436588",
    "metadata": {},
    "outputs": [
@@ -1576,9 +1618,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.10.5 ('env': venv)",
+   "display_name": "env",
    "language": "python",
-   "name": "python3"
+   "name": "env"
   },
   "language_info": {
    "codemirror_mode": {
