DLIS 90 cents done

--- a/science/DLIS/test.ipynb
+++ b/science/DLIS/test.ipynb
@@ -2,7 +2,39 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<Figure size 432x288 with 0 Axes>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "import matplotlib\n",
+    "import matplotlib.pyplot as plt\n",
+    "import numpy as np\n",
+    "\n",
+    "y = [2,4,6,8,10,12,14,16,18,20]\n",
+    "x = np.arange(10)\n",
+    "fig = plt.figure()\n",
+    "ax = plt.subplot(111)\n",
+    "ax.plot(x, y, label='$y = numbers')\n",
+    "plt.title('Legend inside')\n",
+    "ax.legend()\n",
+    "# plt.show()\n",
+    "\n",
+    "fig.savefig('plot.png')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -35,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -44,7 +76,7 @@
        "[Frame(60B), Frame(10B), Frame(1B), Frame(15B)]"
       ]
      },
-     "execution_count": 114,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -55,7 +87,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Frame'"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "list_frame = f.frames\n",
+    "x = str(list_frame[2]).split('(', )\n",
+    "x[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'1B'"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y = x[1].split(')')[0]\n",
+    "y"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -90,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -176,7 +251,7 @@
        " 'GR')"
       ]
      },
-     "execution_count": 116,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -189,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -214,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -239,7 +314,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "no field of name DRHO",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[1;32mc:\\Jimmy\\Codeholic\\ongc-wire\\science\\DLIS\\test.ipynb Cell 11\u001b[0m in \u001b[0;36m<cell line: 1>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Jimmy/Codeholic/ongc-wire/science/DLIS/test.ipynb#ch0000010?line=0'>1</a>\u001b[0m drho \u001b[39m=\u001b[39m curves[\u001b[39m'\u001b[39;49m\u001b[39mDRHO\u001b[39;49m\u001b[39m'\u001b[39;49m]\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Jimmy/Codeholic/ongc-wire/science/DLIS/test.ipynb#ch0000010?line=1'>2</a>\u001b[0m plt\u001b[39m.\u001b[39mplot(drho)\n",
+      "\u001b[1;31mValueError\u001b[0m: no field of name DRHO"
+     ]
+    }
+   ],
+   "source": [
+    "drho = curves['DRHO']\n",
+    "plt.plot(drho)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -279,7 +376,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -299,7 +396,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -354,13 +451,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "60a6a72def574a83b009eeb60445b087",
+       "model_id": "b2c102a512374ab4a205e6124142703e",
        "version_major": 2,
        "version_minor": 0
       },
