testing elasticsearch in progress, fixes Well log spelling

--- a/science/Elasticsearch/ElasticSearch Workshop.ipynb
+++ b/science/Elasticsearch/ElasticSearch Workshop.ipynb
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,14 +46,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Elastic search configuation\n",
     "\n",
-    "es = Elasticsearch(HOST=\"http://localhost\", PORT=9200)\n",
-    "es = Elasticsearch()"
+    "# es = Elasticsearch(HOST='10.205.18.126', PORT=9200)\n",
+    "# es = Elasticsearch()\n",
+    "es = Elasticsearch(\"http://10.205.18.126:9200\")\n",
+    "es"
    ]
   },
   {
