--- a/science/Elasticsearch/ElasticSearch Workshop.ipynb
+++ b/science/Elasticsearch/ElasticSearch Workshop.ipynb
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,9 +46,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 29,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<Elasticsearch(['http://10.205.18.126:9200'])>"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Elastic search configuation\n",
     "\n",
@@ -61,22 +72,27 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "### Creating an index"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'acknowledged': True, 'shards_acknowledged': True, 'index': 'first_index'}"
+       "ObjectApiResponse({'acknowledged': True, 'shards_acknowledged': True, 'index': 'first_index'})"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -89,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {
     "scrolled": true
    },
@@ -97,10 +113,10 @@
     {
      "data": {
       "text/plain": [
-       "True"
+       "HeadApiResponse(True)"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -120,16 +136,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'acknowledged': True}"
+       "ObjectApiResponse({'acknowledged': True})"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -142,16 +158,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "False"
+       "HeadApiResponse(False)"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -169,27 +185,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 23,
    "metadata": {
     "scrolled": true
    },
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "{'_index': 'cities',\n",
-       " '_type': 'places',\n",
-       " '_id': '1',\n",
-       " '_version': 2,\n",
-       " 'result': 'updated',\n",
-       " '_shards': {'total': 2, 'successful': 1, 'failed': 0},\n",
-       " '_seq_no': 6,\n",
-       " '_primary_term': 1}"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\JasmeetSingh\\AppData\\Local\\Temp\\ipykernel_14612\\4146488943.py:7: DeprecationWarning: The 'body' parameter is deprecated and will be removed in a future version. Instead use the 'document' parameter. See https://github.com/elastic/elasticsearch-py/issues/1698 for more information\n",
+      "  es.index(index=\"cities\", doc_type=\"places\", id=1, body=doc_1)\n"
+     ]
+    },
+    {
+     "ename": "TypeError",
+     "evalue": "Elasticsearch.index() got an unexpected keyword argument 'doc_type'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32mc:\\Jimmy\\Codeholic\\ongc-wire\\science\\Elasticsearch\\ElasticSearch Workshop.ipynb Cell 15\u001b[0m in \u001b[0;36m<cell line: 7>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Jimmy/Codeholic/ongc-wire/science/Elasticsearch/ElasticSearch%20Workshop.ipynb#X16sZmlsZQ%3D%3D?line=3'>4</a>\u001b[0m doc_2 \u001b[39m=\u001b[39m {\u001b[39m\"\u001b[39m\u001b[39mcity\u001b[39m\u001b[39m\"\u001b[39m: \u001b[39m\"\u001b[39m\u001b[39mVienna\u001b[39m\u001b[39m\"\u001b[39m, \u001b[39m\"\u001b[39m\u001b[39mcountry\u001b[39m\u001b[39m\"\u001b[39m: \u001b[39m\"\u001b[39m\u001b[39mAustria\u001b[39m\u001b[39m\"\u001b[39m}\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Jimmy/Codeholic/ongc-wire/science/Elasticsearch/ElasticSearch%20Workshop.ipynb#X16sZmlsZQ%3D%3D?line=4'>5</a>\u001b[0m doc_3 \u001b[39m=\u001b[39m {\u001b[39m\"\u001b[39m\u001b[39mcity\u001b[39m\u001b[39m\"\u001b[39m: \u001b[39m\"\u001b[39m\u001b[39mLondon\u001b[39m\u001b[39m\"\u001b[39m, \u001b[39m\"\u001b[39m\u001b[39mcountry\u001b[39m\u001b[39m\"\u001b[39m: \u001b[39m\"\u001b[39m\u001b[39mEngland\u001b[39m\u001b[39m\"\u001b[39m}\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Jimmy/Codeholic/ongc-wire/science/Elasticsearch/ElasticSearch%20Workshop.ipynb#X16sZmlsZQ%3D%3D?line=6'>7</a>\u001b[0m es\u001b[39m.\u001b[39;49mindex(index\u001b[39m=\u001b[39;49m\u001b[39m\"\u001b[39;49m\u001b[39mcities\u001b[39;49m\u001b[39m\"\u001b[39;49m, doc_type\u001b[39m=\u001b[39;49m\u001b[39m\"\u001b[39;49m\u001b[39mplaces\u001b[39;49m\u001b[39m\"\u001b[39;49m, \u001b[39mid\u001b[39;49m\u001b[39m=\u001b[39;49m\u001b[39m1\u001b[39;49m, body\u001b[39m=\u001b[39;49mdoc_1)\n",
+      "File \u001b[1;32mc:\\Jimmy\\Codeholic\\ongc-wire\\env\\lib\\site-packages\\elasticsearch\\_sync\\client\\utils.py:414\u001b[0m, in \u001b[0;36m_rewrite_parameters.<locals>.wrapper.<locals>.wrapped\u001b[1;34m(*args, **kwargs)\u001b[0m\n\u001b[0;32m    411\u001b[0m         \u001b[39mexcept\u001b[39;00m \u001b[39mKeyError\u001b[39;00m:\n\u001b[0;32m    412\u001b[0m             \u001b[39mpass\u001b[39;00m\n\u001b[1;32m--> 414\u001b[0m \u001b[39mreturn\u001b[39;00m api(\u001b[39m*\u001b[39margs, \u001b[39m*\u001b[39m\u001b[39m*\u001b[39mkwargs)\n",
+      "\u001b[1;31mTypeError\u001b[0m: Elasticsearch.index() got an unexpected keyword argument 'doc_type'"
+     ]
     }
    ],
    "source": [
@@ -204,25 +223,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "{'_index': 'cities',\n",
-       " '_type': 'places',\n",
-       " '_id': '2',\n",
-       " '_version': 3,\n",
-       " 'result': 'updated',\n",
-       " '_shards': {'total': 2, 'successful': 1, 'failed': 0},\n",
-       " '_seq_no': 7,\n",
-       " '_primary_term': 1}"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\JasmeetSingh\\AppData\\Local\\Temp\\ipykernel_14612\\2496611161.py:1: DeprecationWarning: The 'body' parameter is deprecated and will be removed in a future version. Instead use the 'document' parameter. See https://github.com/elastic/elasticsearch-py/issues/1698 for more information\n",
+      "  es.index(index=\"cities\", doc_type=\"places\", id=2, body=doc_2)\n"
+     ]
+    },
+    {
+     "ename": "TypeError",
+     "evalue": "Elasticsearch.index() got an unexpected keyword argument 'doc_type'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32mc:\\Jimmy\\Codeholic\\ongc-wire\\science\\Elasticsearch\\ElasticSearch Workshop.ipynb Cell 16\u001b[0m in \u001b[0;36m<cell line: 1>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Jimmy/Codeholic/ongc-wire/science/Elasticsearch/ElasticSearch%20Workshop.ipynb#X20sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m es\u001b[39m.\u001b[39;49mindex(index\u001b[39m=\u001b[39;49m\u001b[39m\"\u001b[39;49m\u001b[39mcities\u001b[39;49m\u001b[39m\"\u001b[39;49m, doc_type\u001b[39m=\u001b[39;49m\u001b[39m\"\u001b[39;49m\u001b[39mplaces\u001b[39;49m\u001b[39m\"\u001b[39;49m, \u001b[39mid\u001b[39;49m\u001b[39m=\u001b[39;49m\u001b[39m2\u001b[39;49m, body\u001b[39m=\u001b[39;49mdoc_2)\n",
+      "File \u001b[1;32mc:\\Jimmy\\Codeholic\\ongc-wire\\env\\lib\\site-packages\\elasticsearch\\_sync\\client\\utils.py:414\u001b[0m, in \u001b[0;36m_rewrite_parameters.<locals>.wrapper.<locals>.wrapped\u001b[1;34m(*args, **kwargs)\u001b[0m\n\u001b[0;32m    411\u001b[0m         \u001b[39mexcept\u001b[39;00m \u001b[39mKeyError\u001b[39;00m:\n\u001b[0;32m    412\u001b[0m             \u001b[39mpass\u001b[39;00m\n\u001b[1;32m--> 414\u001b[0m \u001b[39mreturn\u001b[39;00m api(\u001b[39m*\u001b[39margs, \u001b[39m*\u001b[39m\u001b[39m*\u001b[39mkwargs)\n",
+      "\u001b[1;31mTypeError\u001b[0m: Elasticsearch.index() got an unexpected keyword argument 'doc_type'"
+     ]
     }
    ],
    "source": [
@@ -258,25 +280,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "{'_index': 'cities',\n",
-       " '_type': 'places',\n",
-       " '_id': '1',\n",
-       " '_version': 2,\n",
-       " '_seq_no': 6,\n",
-       " '_primary_term': 1,\n",
-       " 'found': True,\n",
-       " '_source': {'city': 'Paris', 'country': 'France'}}"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "TypeError",
+     "evalue": "Elasticsearch.get() got an unexpected keyword argument 'doc_type'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32mc:\\Jimmy\\Codeholic\\ongc-wire\\science\\Elasticsearch\\ElasticSearch Workshop.ipynb Cell 18\u001b[0m in \u001b[0;36m<cell line: 3>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Jimmy/Codeholic/ongc-wire/science/Elasticsearch/ElasticSearch%20Workshop.ipynb#X22sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m \u001b[39m# Getting the data\u001b[39;00m\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Jimmy/Codeholic/ongc-wire/science/Elasticsearch/ElasticSearch%20Workshop.ipynb#X22sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m res \u001b[39m=\u001b[39m es\u001b[39m.\u001b[39;49mget(index\u001b[39m=\u001b[39;49m\u001b[39m\"\u001b[39;49m\u001b[39mcities\u001b[39;49m\u001b[39m\"\u001b[39;49m, doc_type\u001b[39m=\u001b[39;49m\u001b[39m\"\u001b[39;49m\u001b[39mplaces\u001b[39;49m\u001b[39m\"\u001b[39;49m, \u001b[39mid\u001b[39;49m\u001b[39m=\u001b[39;49m\u001b[39m1\u001b[39;49m)\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Jimmy/Codeholic/ongc-wire/science/Elasticsearch/ElasticSearch%20Workshop.ipynb#X22sZmlsZQ%3D%3D?line=4'>5</a>\u001b[0m res\n",
+      "File \u001b[1;32mc:\\Jimmy\\Codeholic\\ongc-wire\\env\\lib\\site-packages\\elasticsearch\\_sync\\client\\utils.py:414\u001b[0m, in \u001b[0;36m_rewrite_parameters.<locals>.wrapper.<locals>.wrapped\u001b[1;34m(*args, **kwargs)\u001b[0m\n\u001b[0;32m    411\u001b[0m         \u001b[39mexcept\u001b[39;00m \u001b[39mKeyError\u001b[39;00m:\n\u001b[0;32m    412\u001b[0m             \u001b[39mpass\u001b[39;00m\n\u001b[1;32m--> 414\u001b[0m \u001b[39mreturn\u001b[39;00m api(\u001b[39m*\u001b[39margs, \u001b[39m*\u001b[39m\u001b[39m*\u001b[39mkwargs)\n",
+      "\u001b[1;31mTypeError\u001b[0m: Elasticsearch.get() got an unexpected keyword argument 'doc_type'"
+     ]
     }
    ],
    "source": [
@@ -289,20 +306,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'city': 'Paris', 'country': 'France'}"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Get the data which is present in the _source key\n",
     "\n",
@@ -318,25 +324,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "{'_index': 'english',\n",
-       " '_type': 'sentences',\n",
-       " '_id': '2',\n",
-       " '_version': 9,\n",
-       " 'result': 'updated',\n",
-       " '_shards': {'total': 2, 'successful': 1, 'failed': 0},\n",
-       " '_seq_no': 18,\n",
-       " '_primary_term': 1}"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\JasmeetSingh\\AppData\\Local\\Temp\\ipykernel_14612\\874634818.py:6: DeprecationWarning: The 'body' parameter is deprecated and will be removed in a future version. Instead use the 'document' parameter. See https://github.com/elastic/elasticsearch-py/issues/1698 for more information\n",
+      "  es.index(index=\"english\", doc_type=\"sentences\", id=1, body=doc_1)\n"
+     ]
+    },
+    {
+     "ename": "TypeError",
+     "evalue": "Elasticsearch.index() got an unexpected keyword argument 'doc_type'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32mc:\\Jimmy\\Codeholic\\ongc-wire\\science\\Elasticsearch\\ElasticSearch Workshop.ipynb Cell 21\u001b[0m in \u001b[0;36m<cell line: 6>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Jimmy/Codeholic/ongc-wire/science/Elasticsearch/ElasticSearch%20Workshop.ipynb#X25sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m doc_1 \u001b[39m=\u001b[39m {\u001b[39m\"\u001b[39m\u001b[39msentence\u001b[39m\u001b[39m\"\u001b[39m:\u001b[39m\"\u001b[39m\u001b[39mHack COVID-19 is amazing!\u001b[39m\u001b[39m\"\u001b[39m}\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Jimmy/Codeholic/ongc-wire/science/Elasticsearch/ElasticSearch%20Workshop.ipynb#X25sZmlsZQ%3D%3D?line=3'>4</a>\u001b[0m doc_2 \u001b[39m=\u001b[39m {\u001b[39m\"\u001b[39m\u001b[39msentence\u001b[39m\u001b[39m\"\u001b[39m:\u001b[39m\"\u001b[39m\u001b[39mHack-Quarantine is stunning!\u001b[39m\u001b[39m\"\u001b[39m}\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Jimmy/Codeholic/ongc-wire/science/Elasticsearch/ElasticSearch%20Workshop.ipynb#X25sZmlsZQ%3D%3D?line=5'>6</a>\u001b[0m es\u001b[39m.\u001b[39;49mindex(index\u001b[39m=\u001b[39;49m\u001b[39m\"\u001b[39;49m\u001b[39menglish\u001b[39;49m\u001b[39m\"\u001b[39;49m, doc_type\u001b[39m=\u001b[39;49m\u001b[39m\"\u001b[39;49m\u001b[39msentences\u001b[39;49m\u001b[39m\"\u001b[39;49m, \u001b[39mid\u001b[39;49m\u001b[39m=\u001b[39;49m\u001b[39m1\u001b[39;49m, body\u001b[39m=\u001b[39;49mdoc_1)\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Jimmy/Codeholic/ongc-wire/science/Elasticsearch/ElasticSearch%20Workshop.ipynb#X25sZmlsZQ%3D%3D?line=6'>7</a>\u001b[0m es\u001b[39m.\u001b[39mindex(index\u001b[39m=\u001b[39m\u001b[39m\"\u001b[39m\u001b[39menglish\u001b[39m\u001b[39m\"\u001b[39m, doc_type\u001b[39m=\u001b[39m\u001b[39m\"\u001b[39m\u001b[39msentences\u001b[39m\u001b[39m\"\u001b[39m, \u001b[39mid\u001b[39m\u001b[39m=\u001b[39m\u001b[39m2\u001b[39m, body\u001b[39m=\u001b[39mdoc_2)\n",
+      "File \u001b[1;32mc:\\Jimmy\\Codeholic\\ongc-wire\\env\\lib\\site-packages\\elasticsearch\\_sync\\client\\utils.py:414\u001b[0m, in \u001b[0;36m_rewrite_parameters.<locals>.wrapper.<locals>.wrapped\u001b[1;34m(*args, **kwargs)\u001b[0m\n\u001b[0;32m    411\u001b[0m         \u001b[39mexcept\u001b[39;00m \u001b[39mKeyError\u001b[39;00m:\n\u001b[0;32m    412\u001b[0m             \u001b[39mpass\u001b[39;00m\n\u001b[1;32m--> 414\u001b[0m \u001b[39mreturn\u001b[39;00m api(\u001b[39m*\u001b[39margs, \u001b[39m*\u001b[39m\u001b[39m*\u001b[39mkwargs)\n",
+      "\u001b[1;31mTypeError\u001b[0m: Elasticsearch.index() got an unexpected keyword argument 'doc_type'"
+     ]
     }
    ],
    "source": [
@@ -351,21 +360,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\JasmeetSingh\\AppData\\Local\\Temp\\ipykernel_14612\\823689294.py:13: DeprecationWarning: The 'body' parameter is deprecated and will be removed in a future version. Instead use individual parameters.\n",
+      "  res = es.search(body=body)\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "{'took': 2,\n",
-       " 'timed_out': False,\n",
-       " '_shards': {'total': 1, 'successful': 1, 'skipped': 0, 'failed': 0},\n",
-       " 'hits': {'total': {'value': 3, 'relation': 'eq'},\n",
-       "  'max_score': None,\n",
-       "  'hits': []}}"
+       "ObjectApiResponse({'took': 1, 'timed_out': False, '_shards': {'total': 3, 'successful': 3, 'skipped': 0, 'failed': 0}, 'hits': {'total': {'value': 0, 'relation': 'eq'}, 'max_score': None, 'hits': []}})"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -376,49 +388,62 @@
     "## Match query \n",
     "\n",
     "body = {\n",
-    "    \"from\":0,\n",
-    "    \"size\":0,\n",
     "    \"query\": {\n",
     "        \"match\": {\n",
-    "            \"sentence\":\"Hack\"\n",
+    "            \"sentence\":\"entire drilling fraternity\"\n",
     "        }\n",
     "    }\n",
     "}\n",
     "\n",
-    "res = es.search(index=\"english\", body=body)\n",
+    "res = es.search(body=body)\n",
     "res"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "resp = es.search(query={\"match_all\": {}})\n",
+    "resp"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'took': 2,\n",
-       " 'timed_out': False,\n",
-       " '_shards': {'total': 1, 'successful': 1, 'skipped': 0, 'failed': 0},\n",
-       " 'hits': {'total': {'value': 3, 'relation': 'eq'},\n",
-       "  'max_score': 0.13786995,\n",
-       "  'hits': [{'_index': 'english',\n",
-       "    '_type': 'sentences',\n",
-       "    '_id': '2',\n",
-       "    '_score': 0.13786995,\n",
-       "    '_source': {'sentence': 'Hack-Quarantine is stunning!'}},\n",
-       "   {'_index': 'english',\n",
-       "    '_type': 'sentences',\n",
-       "    '_id': '3',\n",
-       "    '_score': 0.13786995,\n",
-       "    '_source': {'sentence': 'Hack nCov is great!'}}]}}"
+       "3"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
+   "source": [
+    "resp['hits']['total']['value']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for hit in resp['hits']['hits']:\n",
+    "     1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "body = {\n",
     "    \"from\":0,\n",
